GNOME Bugzilla – Bug 710480
gsm-manager: Don't abort when all clients exit
Last modified: 2014-03-10 15:54:49 UTC
If all of our clients exit, remove_clients_for_connection() calls end_phase() which in turn invokes gsm_manager_quit() that checks the logout type. But at this point we only have _LOGOUT_NONE, so we end up aborting. It's fine to just call _quit() in this case, and this avoids us dumping core. This was happening to me when session startup failed for other reasons.
Created attachment 257671 [details] [review] gsm-manager: Don't abort when all clients exit
Attachment 257671 [details] pushed as 6e203f4 - gsm-manager: Don't abort when all clients exit
*** Bug 725968 has been marked as a duplicate of this bug. ***