gnome-session/gsm-manager.c
@@ -519,6 +519,7 @@ gsm_manager_quit (GsmManager *manager)
 
         switch (manager->priv->logout_type) {
         case GSM_MANAGER_LOGOUT_LOGOUT:
+        case GSM_MANAGER_LOGOUT_NONE:
                 gsm_quit ();
                 break;
         case GSM_MANAGER_LOGOUT_REBOOT:
